--- a/index.html
+++ b/index.html
@@ -139,10 +139,12 @@
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+            <p class="lead">Rehab foundation is formed in 1991 by a group of people in Manjeri, is working in the field of uplifting the socially and economically weaker sections of the society. Good Hope school is the one of the early venture of the organization. It started with only three children in 1991 with one teacher in one the trustee’s house. Now it is running for past 15 years in rented building. Now it has the strength of 71 children 6 teachers 7 non teaching staff. Good hope school is the first organization from the Malappuram district, which is represented in National trust, which is central government co-coordinating agency working for the comprehensive development of the mentally challenged children. It works in close association with National trust programmes like Niramaya Insurance Card distribution, issue of legal guardianship and other activities like Badhthe Khatham..</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+            <p class="lead">At presents school provides educational service at 5 stages pre-primary-1, primary-II, Primary I, Primary-II, Secondary and Pre-vocational level, students in the age group of 5 – 18 years are getting admission in the school now. Among the 27 students are using Hostel facilities.
+              Rehab foundation under take many other programs with vital important in social and economic aspects of society, house construction for poor families, special housing project in the coastal areas of Malappuram district and micro finance project to initiate for new firms for the skilled persons with the obstacle of low economic who is apart from a entrepreneurship is named as KATHIRU SWAYAM THOZHIL SAHAYA PADHADI. Other than the long projects Rehab foundation plan the different programs in the field of Health, Education and Employment by conducting seminars, free health camps, awareness programs and palliative programs, also actively handling the health clubs, blood donors forum and Rehab service volunteers to manage the overcome the critical situations like natural calamity and other critical stages by any terms of mass injuries or flood.
+              </p>
           </div>
         </div>
         <div class="text-center mt-4">
@@ -209,11 +211,11 @@
         <div class="row">
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Location</h4>
-            <p class="lead mb-0">2215 John Daniel Drive
-              <br>Clark, MO 65243</p>
+            <p class="lead mb-0"> MANJERI, MALAPPURAM DISTRICT – KERALA-676123.  
+              <br>PHONE 0483- 2768401</p>
           </div>
           <div class="col-md-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Around the Web</h4>
+            <h4 class="text-uppercase mb-4">Account Details</h4>
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
@@ -243,9 +245,9 @@
             </ul>
           </div>
           <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">About Freelancer</h4>
-            <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
-              <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+            <h4 class="text-uppercase mb-4">Contact Us</h4>
+            <p class="lead mb-0">
+              <a href="#">Rehab Foundation</a>.</p>
           </div>
         </div>
       </div>
@@ -253,7 +255,7 @@
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; Your Website 2018</small>
+        <small>Copyright &copy; Rehab Foundation 2018</small>
       </div>
     </div>
 
