--- a/index.html
+++ b/index.html
@@ -243,6 +243,8 @@
                 </a>
               </li>
             </ul>
+            <p>Dr Mohamed T, President</p>
+            <p>C.Abdul Hameed, Secretary </p>
           </div>
           <div class="col-md-4">
             <h4 class="text-uppercase mb-4">Contact Us</h4>
