--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="images/profile1.png" alt="">
+                    <img class="img-responsive" src="images/logo.png" alt="">
                     <div class="intro-text">
                         <span class="name">Be part of Rehab</span>
                         <hr class="star-light">
@@ -272,7 +272,7 @@
 <address>
 ACHIPILAKKAL
 KARUVAMBRAM POST,
- MANJERI, MALAPPURAM DISTRICT – KERALA-676123.  PHONE 0483- 2768401
+ MANJERI, MALAPPURAM DISTRICT Â– KERALA-676123.  PHONE 0483- 2768401
 </address>
                 </div>
             </div>
