--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 <div class="dropdown">
   <button class="dropbtn">BENEFICIARIES</button>
   <div class="dropdown-content">
+      <a href="Beneficiaries20212022.pdf">2021 - 2022</a>
       <a href="Beneficiaries20202021.zip">2020 - 2021</a>
       <a href="Beneficiaries2019-2020.zip">2019 - 2020</a>
       <a href="Beneficiaries20182019.zip">2018 - 2019</a>
