--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
 
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="/documents.zip" class="btn btn-lg btn-outline">
+                    <a href="#dropbtn" class="btn btn-lg btn-outline">
                         <i class="fa fa-download">  Beneficiaries </i> 
                     </a>
                 </div>
@@ -310,7 +310,7 @@ SECRETARY: C. ABDUL HAMEED
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; 2014 - Rehab
+                        Copyright &copy; 2022 - Rehab
                     </div>
                 </div>
             </div>
