--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
 <div class="dropdown">
-  <button class="dropbtn">BENEFICIARIES</button>
+  <button id = "beneficiary" class="dropbtn">BENEFICIARIES</button>
   <div class="dropdown-content">
       <a href="Beneficiaries20212022.pdf">2021 - 2022</a>
       <a href="Beneficiaries20202021.zip">2020 - 2021</a>
@@ -250,7 +250,7 @@
 
 
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#dropbtn" class="btn btn-lg btn-outline">
+                    <a href="#beneficiary" class="btn btn-lg btn-outline page-scroll">
                         <i class="fa fa-download">  Beneficiaries </i> 
                     </a>
                 </div>
