--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
 
 <div class="dropdown">
-  <button id = "beneficiary" class="dropbtn">BENEFICIARIES</button>
-  <div class="dropdown-content">
+  <button  class="dropbtn">BENEFICIARIES</button>
+  <div id = "beneficiary" class="dropdown-content">
       <a href="Beneficiaries20212022.pdf">2021 - 2022</a>
       <a href="Beneficiaries20202021.zip">2020 - 2021</a>
       <a href="Beneficiaries2019-2020.zip">2019 - 2020</a>
