--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
+                    
+                    <li class="page-scroll">
+                        <a href="LegalCompliance.pdf">Legal Compliance</a>
+                    </li>
                     <li class="page-scroll">
                         <a href="#portfolio">Gallery</a>
                     </li>
