--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a href="#page-top"></a>
                     </li>
                     
-                    <li class="page-scroll">
+                    <li class="page-scroll dropbtn">
                         <a href="LegalCompliance.pdf">Legal Compliance</a>
                     </li>
                     <li class="page-scroll">
@@ -65,7 +65,7 @@
 
 
 <div class="dropdown">
-  <button  class="dropbtn">BENEFICIARIES</button>
+  <button  class="page-scroll">BENEFICIARIES</button>
   <div id = "beneficiary" class="dropdown-content">
       <a href="Beneficiaries20212022.pdf">2021 - 2022</a>
       <a href="Beneficiaries20202021.zip">2020 - 2021</a>
